@@ -2,6 +2,7 @@ package com.example.post_project.service;
 
 import com.example.post_project.config.auth.LoginUser;
 import com.example.post_project.config.auth.dto.SessionUser;
+import com.example.post_project.domain.Pagenation;
 import com.example.post_project.domain.post.Post;
 import com.example.post_project.domain.post.PostRepository;
 import com.example.post_project.domain.user.Users;
@@ -11,14 +12,17 @@ import com.example.post_project.web.dto.post.PostResponseDto;
 import com.example.post_project.web.dto.post.PostSaveRequestDto;
 import com.example.post_project.web.dto.post.PostUpdateRequestDto;
 import lombok.RequiredArgsConstructor;
+import lombok.extern.slf4j.Slf4j;
+import org.springframework.data.domain.Page;
 import org.springframework.data.domain.Pageable;
+import org.springframework.http.ResponseEntity;
 import org.springframework.stereotype.Service;
 
 //import javax.transaction.Transactional; // option x.
 import org.springframework.transaction.annotation.Transactional;
 import java.util.List;
 import java.util.stream.Collectors;
-
+@Slf4j
 @RequiredArgsConstructor
 @Service
 public class postService {
@@ -27,11 +31,13 @@ public class postService {
     private final UsersRepository usersRepository;
 
     @Transactional
-    public Long save(PostSaveRequestDto requestDto, SessionUser sessionUser)
+    public ResponseEntity save(PostSaveRequestDto requestDto, SessionUser sessionUser)
     {
         Users user=usersRepository.findById(sessionUser.getId()).get();
         requestDto.setUser(user);
-        return postRepository.save(requestDto.entity()).getId();
+        Post create=postRepository.save(requestDto.entity());
+        log.info("ResponseEntity : {}", ResponseEntity.ok(new PostResponseDto(create)));
+        return ResponseEntity.ok("게시글 작성.");
     }
 
     @Transactional
@@ -39,8 +45,6 @@ public class postService {
         Post post=postRepository.findById(id).orElseThrow(()->new IllegalArgumentException("해당 글이 노존재"));
         if(post.getUser().getId().equals(user.getId()))
             post.update(requestDto); // dirtyCheck
-        else
-            return null;
         return id;
     }
 
@@ -53,7 +57,8 @@ public class postService {
     public void delete(Long id) {
         Post post=postRepository.findById(id).orElseThrow(()->new IllegalArgumentException("노 게시판") );
         postRepository.delete(post);
-        System.out.println("Clean Remove ------------------------------ ");
+        ResponseEntity.ok(new PostResponseDto());
+        log.info("삭제번호" +post);
     }
 
     @Transactional(readOnly = true)
@@ -67,9 +72,17 @@ public class postService {
         return postRepository.findByTitleContainingOrContentContaining(keyword,keyword,pageable).stream().map(PostListResponseDto::new).collect(Collectors.toList());
     }
     @Transactional(readOnly = true)
-    public List<Post> pagingList(Pageable pageable)
+    public Pagenation pagingList(Pageable pageable)
     {
-        return postRepository.findAll(pageable).toList();
+        Page<Post> all=postRepository.findAll(pageable);
+        Pagenation pagenation=Pagenation.builder()
+                .totalPages(all.getTotalPages()) // 페이지 개수 0부터
+                .totalElements(all.getTotalElements()) // 총 post 원소 갯수
+                .currentPage(all.getNumber()) // 현재 페이지
+                .currentElements(all.getNumberOfElements()) // 현재 페에지의 개수.
+                .pagingList(all.stream().map(post -> post).collect(Collectors.toList()))
+                .build();
+        return pagenation;
     }
 
     @Transactional(readOnly = true)
